affichage de texte

--- a/internal/app/web/static/index.html
+++ b/internal/app/web/static/index.html
@@ -29,6 +29,14 @@
   </div>
 
   <div>
+    <input type="radio" id="text" name="action" value="text" />
+    <label for="text">Text</label>
+    <label for="text-affiche">Text à afficher: </label>
+    <input id="text-affiche" type="text" name="text-affiche" value="0123" maxlength="4" />
+
+  </div>
+
+  <div>
     <input type="radio" id="arret" name="action" value="arret" />
     <label for="arret">Arret</label>
   </div>
