corrige le rechargement du formulaire si clique sur le bouton

--- a/internal/app/web/static/index.html
+++ b/internal/app/web/static/index.html
@@ -12,7 +12,7 @@
 
     <div>
 
-      <form name="myForm">
+      <form name="myForm" onsubmit="return false">
         <fieldset>
   <legend>Sélection de l'affichage</legend>
 
